# develops-today

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
news/: admin.py  models.py  serializers.py  tasks.py  views.py
