[tool.poetry]
name = "Python test assessment by DevelopsToday"
version = "0.1.0"
description = ""
authors = ["Kovalev Evgeniy"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
flake8-isort = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
